internal/octogo/testdata/18_select_statements.ogo
func testSelect() {
    var ch chan int
    var x int = 0

    for {
        select {
        case x = <-ch:
            // Valid receive
        case ch <- 10:
            // Valid send
        default:
            // Valid fallback
        }
    }
}

func testInvalidSelect() {
    var ready bool = true

    select {
    // ERROR "expected.*<-"
    case ready == true: 
    	// ERROR "expected"
        ready = false
    }
}
